rebuild; TablePerformanceTest: +string_range