@@ -3,7 +3,6 @@ package kvs.table;
 import java.util.Random;
 
 import org.junit.Before;
-import org.junit.Ignore;
 import org.junit.Test;
 
 import kvs.component.Cell;
@@ -15,8 +14,6 @@ import kvs.compound.TimestampedCell;
 
 /**
  * Performance tests for {@link MasterTable} and {@link SlaveTable}.
- * <p>
- * -verbose:gc -XX:+PrintGCDetails -XX:+HeapDumpOnOutOfMemoryError
  * 
  * @author hengxin
  * @date Created on Dec 20, 2015
@@ -24,17 +21,17 @@ import kvs.compound.TimestampedCell;
 public class TablePerformanceTest
 {
 	private final static int DURATION = 5 * 60 * 1000;	// in ms; 30 minutes
-	private final static int RANGE = 50;	// key&col range 
+	private final static int RANGE = 100;	// key&col range 
 	private final static int PUTS = 5;
 	private final static int GETS = 2; 
 	
-	private AbstractTable master_table;
-	private AbstractTable slave_table;
+	private AbstractTable table;
 
 	private Thread timer;
 	
 	private	Random rand = new Random();
 	
+	private final String[] string_range = new String[RANGE];
 	private final Row[] row_range = new Row[RANGE];
 	private final Column[] col_range = new Column[RANGE];
 	private final Cell[] cell_range = new Cell[RANGE];
@@ -64,7 +61,8 @@ public class TablePerformanceTest
 	@Test
 	public void testMasterTable()
 	{
-		this.master_table = new MasterTable();
+//		this.table = new MasterTable();
+		this.table = new SlaveTable();
 		
 		timer.start();
 		
@@ -82,13 +80,14 @@ public class TablePerformanceTest
 			{
 				index = rand.nextInt(RANGE);
 
-				if(row_range[index] == null)
+				if(string_range[index] == null)
 				{
 					index_str = String.valueOf(index);
 					row = new Row(index_str);
 					col = new Column(index_str);
 					cell = new Cell(index_str);
-					
+
+					string_range[index] = index_str;
 					row_range[index] = row;
 					col_range[index] = col;
 					cell_range[index] = cell;
@@ -100,25 +99,32 @@ public class TablePerformanceTest
 				}
 				
 				ITimestampedCell tc = new TimestampedCell(new Timestamp(ts++), cell);
-				this.master_table.put(row, col, tc);
+				this.table.put(row, col, tc);
 			}
 			
 			for(int i = 0; i < GETS; i++)
 			{
 				index = rand.nextInt(RANGE);
-				index_str = String.valueOf(index);
 
-				if(row_range[index] == null)
+				if(string_range[index] == null)
 				{
+					index_str = String.valueOf(index);
+					
 					row = new Row(index_str);
 					col = new Column(index_str);
+					
+					string_range[index] = index_str;
+					row_range[index] = row;
+					col_range[index] = col;
+					
+					cell_range[index] = new Cell(index_str);	// put an extra {@link Cell} for later reuse
 				} else
 				{
 					row = row_range[index];
 					col = col_range[index];
 				}
 
-				this.master_table.getTimestampedCell(row, col);
+				this.table.getTimestampedCell(row, col);
 			}
 			
 			number = number + PUTS + GETS;
@@ -127,12 +133,5 @@ public class TablePerformanceTest
 		
 		System.out.println(String.format("[%d] operations in [%d] ms.", number, DURATION));
 		System.out.println("Average: " + (number * 1.0) / DURATION * 1000.0);
-	}
-
-	@Test
-	@Ignore
-	public void testSlaveTable()
-	{
-		this.slave_table = new SlaveTable();
 	}
 }
